--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,9 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  commons:
+    or: "or"
+
   search_placeholder: "Search"
   search_for_whole_post: "Search for old stuffs"
   give_your_old_stuffs: "Give your old stuffs"
