--- a/config/locales/user.en.yml
+++ b/config/locales/user.en.yml
@@ -1,3 +1,10 @@
 en:
   login: "Log in"
   signup: "Sign up"
+  email: "Email"
+  password: "Password"
+  remember_me: "Remember me"
+  login_with_facebook: "Sign in with Facebook"
+  forget_password?: "Forgt your password?"
+  password_confirmation: "Password confirmation"
+  minimum_password_length: "%{length} characters minimum"
