--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,6 @@
 en:
   onboarding_welcome: "Welcome to Freebie,"
+  onboarding_about: "Freebie is a community for sharing old furniture in Vietnam. Freebie lets you give away old things and unnecessary, to hand those who truly need it than, to help save and protect the environment!"
   onboarding_instruction: "What're you looking for?"
 
   commons:
