--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -1,5 +1,6 @@
 vi:
   onboarding_welcome: "Chào mừng bạn đến với Freebie,"
+  onboarding_about: "Freebie là một cộng đồng để chia sẻ đồ cũ ở Việt Nam. Freebie cho phép bạn cho đi những đồ vật cũ và không cần thiết, đến tay những người thật cần nó hơn, để góp phần tiết kiệm và bảo vệ môi trường!"
   onboarding_instruction: "Bạn đang tìm kiếm điều gì?"
   commons:
     or: "hoặc"
