add claim button

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,7 +38,8 @@ en:
       published: 'Public'
       closed: 'Closed'
       drafted: 'Draft'
-      
+    claim: "Claim"
+
   publish: "Publish"      
   edit: "Edit"
   close: "Close"
