--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -37,6 +37,7 @@ vi:
       published: 'Đang đăng'
       closed: 'Đã đóng'
       drafted: 'Lưu nháp'
+    claim: "Yêu cầu"
       
   publish: "Đăng"
   edit: "Sửa"
