--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,6 +44,7 @@ en:
       closed: 'Closed'
       drafted: 'Draft'
     claim: "Claim"
+    location: "Area"
 
   publish: "Publish"
   edit: "Edit"
