--- a/config/locales/giveaway.vi.yml
+++ b/config/locales/giveaway.vi.yml
@@ -4,3 +4,5 @@ vi:
     tell_location_description: "Địa chỉ của bạn được dùng để tìm những bài đăng và hoạt động từ thiện xung quanh bạn. Bạn chỉ cần nhập thông tin này một lần và sau này có thể thay đổi nó trong hồ sơ cá nhân của bạn."
     choose_location: "Chọn thành phố"
     save_location: "Lưu lại thành phố"
+    detecting_location: Đang tìm kiếm thành phố hiện tại của bạn...
+    detected_location: Thành phố hiện tại của bạn là
