--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -30,7 +30,7 @@ vi:
       header: "Cho đồ cũ"
       title: "Tiêu đề, ví dụ áo thun bamboo cũ đã dùng 2 năm"
       description: "Mô tả về món đồ bạn đang muốn cho"
-      location: "Khu vực"
+      location: "Thành phố"
       category: "Phân loại"
       main_image: "Tải lên hình ảnh"
       submit_edit: "Cập nhật"
