--- a/config/locales/giveaway.en.yml
+++ b/config/locales/giveaway.en.yml
@@ -9,3 +9,4 @@ en:
     join_campaign: Have a look at these campaigns
     join_campaign_description: Joining a campaign is a great way to bring your stuff to people in need in distance area.
     join_campaign_alternative: Alternative you can post your stuff.
+    select_category: "Select a category"
