--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -81,11 +81,11 @@ vi:
 
   welcome:
     index:
-      title_1: "Những thứ không thiết với bạn,"
-      title_2: "đôi khi lại mang niềm hạnh phúc cho người khác."
+      title_1: "Những thứ không cần thiết với bạn,"
+      title_2: "đôi khi lại mang đến niềm hạnh phúc cho người khác."
       message: "Hãy cho đi những đồ vật cũ và không cần thiết. Nó sẽ được đến tay những người thật sự cần nó hơn, để góp phần tiết kiệm và bảo vệ môi trường."
       btn_action: "Cho ngay đồ cũ"
-      description: "Với mục tiêu tạo ra một cộng đồng để cùng nhau chia sẽ những món đồ không thật cần thiết! Bạn không phải bỏ đi những món đồ không còn cần thiết của bạn vào thùng rác nữa. Từ đó góp phần tái sử dụng, tiết kiệm, bảo vệ môi trường và mang đến hạnh phúc cho nhiều người khác!"
+      description: "Mục tiêu của Freebie là tạo ra một cộng đồng để cùng nhau chia sẻ những món đồ không thật cần thiết! Bạn không phải bỏ đi những món đồ không còn cần thiết của bạn vào thùng rác nữa. Từ đó góp phần tái sử dụng, tiết kiệm, bảo vệ môi trường và mang đến hạnh phúc cho nhiều người khác!"
 
       overview:
         title: "Tìm đồ cũ"
