--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -70,8 +70,8 @@ vi:
   footer:
     first_column:
       contact_us: "Liên Hệ"
-      instruction: "Hộ trợ trực tuyến 24/7, hãy giữ liên lạc qua thông tin bên dưới:"
-      address: "1234 Tên Đường, Tên Thành Phố, Tên Quốc Gia"
+      instruction: "Hỗ trợ trực tuyến 24/7, hãy giữ liên lạc qua thông tin bên dưới:"
+      address: "Freebie - CoderSchool 2016"
       phone_number: "(123) 456-7890"
       email: "admin@freebie.vn"
     second_column:
