--- a/config/locales/category.en.yml
+++ b/config/locales/category.en.yml
@@ -1,9 +1,10 @@
 en:
   category:
-    money: money
-    people: people
-    clothes: clothes
-    furniture: furniture
-    electronics: electronics
-    books: books
-    other: other
+    toys: Toys
+    money: Money
+    people: People
+    clothes: Clothes
+    furniture: Furniture
+    electronics: Electronics
+    books: Books
+    other: Other
