--- a/config/locales/category.vi.yml
+++ b/config/locales/category.vi.yml
@@ -1,9 +1,10 @@
 vi:
   category:
-    money: tiền
-    people: nhân lực
-    clothes: quần áo
-    furniture: vật dụng
-    electronics: điện tử
-    books: sách
-    other: khác
+    toys: Đồ chơi
+    money: Tiền
+    people: Nhân lực
+    clothes: Quần áo
+    furniture: Vật dụng
+    electronics: Điện tử
+    books: Sách
+    other: Khác
