--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -113,7 +113,9 @@ vi:
         title: "Quyên góp"
         message: "Quyên góp những món đồ cũ hay không còn cần thiết của bạn cho các tổ chức từ thiện. Để mang đến nụ cười cho người nghèo và trẻ em Việt Nam."
         btn_action: "Quyên góp ngay"
-
+  giveaway:
+    location:
+      message: "Đã lưu địa điểm của bạn"
   will_paginate: 
     previous_label: "trước"
     next_label: "sau"
