--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -74,7 +74,7 @@ vi:
       location_loading_message: "Đang tải bài đăng ở khu vực của bạn..."
       reload_page_btn: "Tải lại trang với vị trí này"
       yes_btn: "Có"
-      no_btn: "Không. Cảm ơn!"
+      no_btn: "Không, Cảm ơn!"
     location: "Khu vực"
     social_share:
       message: "Hãy share bài đăng này, bạn sẽ có cơ hội cho đi nhanh hơn! Và biết đâu một người bạn của bạn đang cần món đồ này!"
