add i18n for message

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -133,3 +133,8 @@ en:
   campaign:
     message:
       success: "Message has been sent, we will contact you soon!"
+  message:
+    sent:
+      success: "Your message has been sent successfully."
+    reply: 
+      success: "Your reply has been sent successfully."
