add button for giveaways campaign selection

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -111,6 +111,9 @@ en:
   giveaway:
     location:
       message: "Your location was successfully updated."
+  giveaways:
+    select_campaign:
+      join_action: "Show campaign list"
 
   welcome:
     index:
